--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Change password</h4>
+{% endblock %}
+
 
 {% block content %}
-<h2>Change password</h2>
 <p>Your password has been changed</p>
 {% endblock %}
