--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Change password</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Change password</h2>
 <p>Fill in the details below to change your password</p>
 <form method="post">
   {% csrf_token %}
