--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Password reset</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Password reset</h2>
 <p>Your new password has been set. <a href="{% url 'login' %}">Log in</a> now.</p>
 {% endblock %}
