--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Password reset</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Password reset</h2>
 <p>We've emailed you a link to reset your password. Check your inbox.</p>
 {% endblock %}
