--- a/templates/django_registration/activation_complete.html
+++ b/templates/django_registration/activation_complete.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/register30.png" %}" alt="Login">
+  Register</h4>
+{% endblock %}
 
 {% block content %}
 <p>Your account is now activated. <a href="{% url 'login' %}">Log in</a> now.</p>
