--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/register30.png" %}" alt="Login">
+  Register</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Register</h2>
 <p>Thank you for registering on CameraHub. Please check your inbox for an email to activate your account.</p>
 {% endblock %}
