--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Password reset</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Password reset</h2>
 {% if validlink %}
 
 <form method="POST">
