--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block heading %}
+<h4>
+  <img src="{% static "icons/30/password30.png" %}" alt="Login">
+  Password reset</h4>
+{% endblock %}
 
 {% block content %}
-<h2>Password reset</h2>
 <p>Enter your email address below, and we'll email instructions for setting a new password.</p>
 
-  <form method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Submit">
-  </form>
+<form method="POST">
+  {% csrf_token %}
+  {{ form|crispy }}
+  <input type="submit" value="Submit">
+</form>
 {% endblock %}
