--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -1,7 +1,6 @@
 {% load static %}
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #3498db;">
-    <div class="container">
+<nav class="navbar navbar-expand navbar-dark" style="background-color: #3498db;">
         <a class="navbar-brand" href="#">
             <h3>CameraHub</h3>
         </a>
@@ -89,5 +88,4 @@
                 {% endif %}
             </ul>
         </div>
-    </div>
 </nav>
