--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -3,6 +3,10 @@
 {% block content %}
 <table class="table">
   <tr>
+    <th>Disambiguation</th>
+    <td>{{ object.disambiguation }}</td>
+  </tr>
+  <tr>
     <th>Mount</th>
     <td>{% if object.mount %}<a href="{% url 'mount-detail' object.mount.id %}">{{ object.mount }}</a>{% endif %}</td>
   </tr>
@@ -44,7 +48,8 @@
   </tr>
   <tr>
     <th>Negative size</th>
-    <td>{% if object.negative_size %}<a href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
+    <td>{% if object.negative_size %}<a
+        href="{% url 'negativesize-detail' object.negative_size.id %}">{{ object.negative_size }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Shutter type</th>
@@ -76,7 +81,8 @@
   </tr>
   <tr>
     <th>Lens model</th>
-    <td>{% if object.lensmodel %}<a href="{% url 'lensmodel-detail' object.lensmodel.id %}">{{ object.lensmodel }}</a>{% endif %}</td>
+    <td>{% if object.lensmodel %}<a
+        href="{% url 'lensmodel-detail' object.lensmodel.id %}">{{ object.lensmodel }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>Battery quantity</th>
