Add Collapse sections to inlines

--- a/schema/templates/schema/bulkfilm_detail.html
+++ b/schema/templates/schema/bulkfilm_detail.html
@@ -32,8 +32,10 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-  <h4>Films cut from this bulk film</h4>
+<a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
+  Films cut from this bulk film
+</a>
+<div class="collapse" id="collapseFilms">
   <table class="table">
     <tr>
       <th>Film ID</th>
