--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -192,8 +192,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-  <h4>Cameras</h4>
+<a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
+  Cameras</a>
+<div class="collapse" id="collapseCameras">
   <table class="table">
     <tr>
       <th>Serial</th>
