--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -28,8 +28,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-    <h4>Films</h4>
+<a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
+  Films</a>
+<div class="collapse" id="collapseFilms">
     <table class="table">
       <tr>
         <th>Film</th>
