--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -81,8 +81,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-    <h4>Prints</h4>
+<a data-toggle="collapse" href="#collapsePrints" role="button" aria-expanded="false" aria-controls="collapsePrints">
+  Prints</a>
+<div class="collapse" id="collapsePrints">
     <table class="table">
       <tr>
         <th>ID</th>
