--- a/schema/templates/schema/series_detail.html
+++ b/schema/templates/schema/series_detail.html
@@ -8,8 +8,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-  <h4>Cameras</h4>
+<a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
+  Cameras</a>
+<div class="collapse" id="collapseCameras">
   <table class="table">
     <tr>
       <th>Model</th>
@@ -22,8 +23,11 @@
     {% endfor %}
     {% endfor %}
   </table>
+</div>
 
-  <h4>Lenses</h4>
+<a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
+  Lenses</a>
+<div class="collapse" id="collapseLenses">
   <table class="table">
     <tr>
       <th>Model</th>
