--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -96,8 +96,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-  <h4>Negatives</h4>
+<a data-toggle="collapse" href="#collapseNegatives" role="button" aria-expanded="false" aria-controls="collapseNegatives">
+  Negatives</a>
+<div class="collapse" id="collapseNegatives">
   <table class="table">
     <tr>
       <th>Frame</th>
