--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -152,8 +152,9 @@
   </tr>
 </table>
 
-<div style="margin-left:20px;margin-top:20px">
-    <h4>Lenses</h4>
+<a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
+  Lenses</a>
+<div class="collapse" id="collapseLenses">
     <table class="table">
       <tr>
         <th>Serial</th>
