--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -8,7 +8,8 @@
   </tr>
   <tr>
     <th>Manufacturer</th>
-    <td>{% if object.manufacturer %}<a href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
+    <td>{% if object.manufacturer %}<a
+        href="{% url 'manufacturer-detail' object.manufacturer.id %}">{{ object.manufacturer }}</a>{% endif %}</td>
   </tr>
   <tr>
     <th>ISO</th>
@@ -31,18 +32,18 @@
 <a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
   Films</a>
 <div class="collapse" id="collapseFilms">
-    <table class="table">
-      <tr>
-        <th>Film</th>
-        <th>Caption</th>
-        <th>Date</th>
-      </tr>
-      {% for film in filmstock.film_set.all %}
-      <tr>
-        <td>{{ film.pk }}</td>
-        <td>{{ film.description }}</td>
-      </tr>
-      {% endfor %}
-    </table>
-  </div>
+  <table class="table">
+    <tr>
+      <th>Film</th>
+      <th>Caption</th>
+      <th>Date</th>
+    </tr>
+    {% for film in filmstock.film_set.all %}
+    <tr>
+      <td>{{ film.pk }}</td>
+      <td>{{ film.description }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
