--- a/schema/templates/schema/about.html
+++ b/schema/templates/schema/about.html
@@ -51,7 +51,7 @@
 
 <h2>Community</h2>
 
-<p>With a project like CameraHub, building a community is key. CameraHub provides a platforms, but it is useless without
+<p>With a project like CameraHub, building a community is key. CameraHub provides a platform, but it is useless without
     good quality data.
     This is where the community comes in - collectively gathering and entering data so everyone can benefit.</p>
 <p>For example, you might buy a camera on eBay, wish to catalogue it, and find that it is not yet in CameraHub. You'd do
