--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -13,6 +13,9 @@
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'help' %}">Help</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'stats' %}">Stats</a>
                 </li>
 
