Move stats into dropdown

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -9,12 +9,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'help' %}">Help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'stats' %}">Stats</a>
-                </li>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -82,6 +76,7 @@
 
                         <a class="dropdown-item" href="{% url 'about' %}">About</a>
                         <a class="dropdown-item" href="{% url 'concepts' %}">Concepts</a>
+                        <a class="dropdown-item" href="{% url 'stats' %}">Stats</a>
                     </div>
                 </li>
 
